@@ -5,10 +5,15 @@ Release 5.1.3 (Unreleased)
 Bug fixes
 ---------
 
-- Fix crash in scalar gradient reconstruction with body forces for sequantial
+- Fix crash in scalar gradient reconstruction with body forces for sequential
   runs (due to incomplete fix in 5.1.2).
 
 - Fix obsolete URL for HDF5 download in automatic installer.
+
+Changes
+-------
+
+- Allow stopping at a given wall-clock time using the control_file.
 
 Release 5.1.2 (Jan 29 2018)
 ===========================
